# TokenStep-Windows

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.en.md  README.md  SECURITY.md  _ship.py  install-launchd.sh  token_usage_monitor.py  uninstall-launchd.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-windows.yml
TokenStepSwift/: Package.swift  README.md
TokenStepSwift/Sources/TokenStepHelper/: main.swift
TokenStepSwift/Tests/Fixtures/: CCSwitchProxyFixtureCheck.swift
TokenStepSwift/Tests/TokenStepSwiftTests/: UsageCollectorCCSwitchTests.swift  UsageCollectorClaudeCodeTests.swift  (+1 more)
TokenUsageMenuApp/: README.md  TokenUsageMenu.py  build_app.sh  render_icon.py
TokenUsageMenuApp/assets/: TokenStepIcon.icns
config/: pricing.json
docs/: ANALYTICS.md
script/: build_and_run.sh  build_pyobjc_and_run.sh  build_swiftui_and_run.sh  check_localization.py  github_download_stats.py  package_release.sh
windows/: LICENSE  README.md
windows/docs/: PACKAGING.md  ROADMAP.md  SIGNING.md
windows/scripts/: build-release.bat  sign.bat
windows/src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
windows/src-tauri/capabilities/: default.json
windows/src-tauri/examples/: check.rs
windows/src-tauri/icons/: icon.icns
windows/src-tauri/resources/: pricing.json
windows/src-tauri/src/: claude_quota.rs  codex_quota.rs  collector.rs  lib.rs  main.rs  models.rs  paths.rs  pricing.rs  settings.rs  token_rank.rs  update.rs
(+54 files in other folders)
